[tool.poetry]
name = "StagoCrack"
version = "0.1.0"
description = ""
authors = ["@plawlost <contact@plawlost.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"